--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
                 var lastname="Bolagam"
                 var fullname=firstname.concat(lastname)
                 console.log(fullname)
+                var num1=1234567890
+                var num2=0987654321
+                var add=num1+num2
+                console.log(add)
+                var sub=num1-num2
+                console.log(sub)
+                var div= num1/num2
+                console.log(div)
+                var mul=num2*num1
+                console.log(mul)
                 </script>
     </body>
 </html>
